# AI-CLI

./: .coveragerc  .gitattributes  .gitignore  BOM-FIX-REPORT.md  BUGFIX.md  CHANGELOG.md  CLI-LANG-FEATURE.md  CREATE-NEW-CONSOLE-FIX.md  DEPENDENCY-FIX.md  DETECTION-DIFF-SUMMARY.md  DOCUMENTATION-CLEANUP.md  ESC-Q-KEY-FIX.md  FEATURE-COMPARISON.md  FEATURE-IMPLEMENTATION-v3.1.0.md  FILE-VERIFICATION-REPORT.md  FINAL-REPORT.md  GERMAN-DOCS-REPORT.md  I18N-REVIEW-REPORT.md  I18N-UI-FIX.md  IMPLEMENTATION-SUMMARY.md  INSTALL-GUIDE.md  KEYBOARD-FIX-REPORT.md  LICENSE  MANIFEST.in  PROGRESS-REPORT.md  PROGRESS-SUMMARY.md  PROJECT-COMPLETION-REPORT.md  QUICKSTART.md  README.de.md  README.ja.md  README.md  README.zh.md  RELEASE-v2.0.0.md  RELEASE-v3.0.0.md  STAGE-1-2-SUMMARY.md  STAGE-2-3-COMPLETION-REPORT.md  STAGE-4-COMPLETION-REPORT.md  TASK-CHECKLIST.md  TASK-COMPLETION-REPORT.md  TOOL-DETECTION-COMPARISON.md  (+32 more)
.claude/: CLAUDE.md
.github/: GIT_COMMIT_CONVENTION.md  SCOOP-ACTION-SETUP.md
.github/workflows/: publish-pypi.yml  publish.yml  update-scoop.yml
.kiro/context/: git-commit-convention.md
.kiro/settings/: lsp.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  (+2 more)
ai_cli/: __init__.py  app.py  cli.py  config.py  models.py  utils.py
docs/: AI_CLI_TOOLS_COMPARISON.md  AI_WORKER_SYSTEM_DESIGN.md  BOM-FIX.md  BUGFIX.ja.md  BUGFIX.md  BUGFIX.zh.md  CHANGELOG.ja.md  CHANGELOG.md  CHANGELOG.zh.md  CI_CD_INTEGRATION_GUIDE.md  DEADLOCK-FIX.md  DEPENDENCY-CONFLICT-v2.md  DEPENDENCY-CONFLICT.md  DESKTOP-SHORTCUT.md  FLICKER-FIX.md  GIT-WORKTREE.md  INSTALL-GUIDE.de.md  INSTALL-GUIDE.ja.md  INSTALL-GUIDE.md  INSTALL-GUIDE.zh.md  KEYBOARD-FIX.md  LAUNCH-WINDOW-FIX.md  LOADING-OPTIMIZATION.md  PERFORMANCE-OPTIMIZATION.md  PYTHON-MIGRATION-ANALYSIS.md  PYTHON-MIGRATION-WSL-SUPPORT.md  README.md  SCOOP-PUBLISH.ja.md  SCOOP-PUBLISH.md  SCOOP-PUBLISH.zh.md  TEAM_ORGANIZATION.md  TOOLS.de.md  TOOLS.ja.md  TOOLS.md  TOOLS.zh.md  TROUBLESHOOTING_GUIDE.md  VERSION-MANAGEMENT.md  WINDOWS-UI-FIX.md  WSL-LAUNCH-FIX.md
lang/: de-DE.ps1  en-US.ps1  ja-JP.ps1  zh-CN.ps1
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_features.py  test_git.py  test_models.py  test_platform.py  test_projects.py  test_tools.py  test_ui.py  test_utils.py
(+27 files in other folders)
