[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli-launcher"
version = "3.0.8"
description = "Cross-platform AI CLI launcher for managing multiple AI coding assistants"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AI-CLI Team", email = "dev@ai-cli.org"}
]
keywords = ["ai", "cli", "launcher", "kiro", "claude", "cursor", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
]

dependencies = [
    "rich>=13.7.0,<15.0.0",
    "prompt-toolkit>=3.0.0",
    "click>=8.1.0",
    "platformdirs>=4.0.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ai-cli = "ai_cli.cli:main"

[project.urls]
Homepage = "https://github.com/hyfhot/AI-CLI"
Documentation = "https://github.com/hyfhot/AI-CLI/tree/main/docs"
Repository = "https://github.com/hyfhot/AI-CLI"
Issues = "https://github.com/hyfhot/AI-CLI/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_cli*"]

[tool.setuptools.package-data]
ai_cli = ["*.ico"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v"
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.0.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "3.0.7"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
